; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/uhsoctl/extr_uhsoctl.c_tmr_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/uhsoctl/extr_uhsoctl.c_tmr_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ctx = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"AT+CSQ\0D\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i8*)* @tmr_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tmr_status(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ctx*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ctx*
  store %struct.ctx* %7, %struct.ctx** %5, align 8
  %8 = load %struct.ctx*, %struct.ctx** %5, align 8
  %9 = getelementptr inbounds %struct.ctx, %struct.ctx* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @at_cmd_async(i32 %10, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0))
  %12 = load %struct.ctx*, %struct.ctx** %5, align 8
  %13 = call i32 @watchdog_reset(%struct.ctx* %12, i32 10)
  ret void
}

declare dso_local i32 @at_cmd_async(i32, i8*) #1

declare dso_local i32 @watchdog_reset(%struct.ctx*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
